--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "acrool",
     "react",
     "typescript",
-    "Auto Height Textarea",
+    "Auto Height Textarea"
   ],
   "author": "info@acrool.com",
   "private": false,
