--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acrool/react-auto-height-textarea",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "This is a react method to quickly combine buttons with Auto Height Textarea",
   "keywords": [
     "acrool",
