--- a/package.json
+++ b/package.json
@@ -52,11 +52,7 @@
     "react-dom": "^18.x"
   },
   "dependencies": {
-    "@acrool/react-portal": "^1.0.1",
-    "@acrool/js-logger": "^1.0.23",
-    "clsx": "^2.1.1",
-    "ulid": "^2.3.0",
-    "framer-motion": "^11.3.19"
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
